<resources>
    <string name="app_name">MiniApp3</string>
    <string name="pbd_string">PBD2020</string>
    <string name="app_name_splash">Android Mini App 3</string>
    <string name="searchTab">SEARCH RECIPE BY INGREDIENT</string>
    <string name="favoriteTab">FAVORITE RECIPES</string>
    <string name="noRecipesExist">Sorry, no recipes for this ingredient exist.</string>
    <string name="noFavoriteRecipes">Start adding recipes, to view when offline.</string>
    <string name="ingredients">Ingredients list</string>
    <string name="measurements">Measurements list</string>
    <string name="instructions">Instructions</string>
    <string name="addFavorites">Add to favorites</string>
    <string name="removeFavorites">Remove from favorites</string>
    <string name="noInternet">No internet connection.</string>
</resources>
