<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="si.uni_lj.fri.pbd.miniapp3.ui.DetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/recipeImage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/recipeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/recipeImage"
            android:layout_marginLeft="2dp"
            android:textSize="28dp" />

        <TextView
            android:id="@+id/recipeArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/recipeTitle"
            android:layout_marginLeft="2dp"
            android:textSize="20dp" />

        <ToggleButton
            android:id="@+id/favoriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:textOff="@string/addFavorites"
            android:textOn="@string/removeFavorites"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recipeArea" />

        <View
            android:id="@+id/hr1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@+id/favoriteButton"
            app:layout_constraintStart_toStartOf="parent"
            android:background="#000000" />

        <TextView
            android:id="@+id/ingredientsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/hr1"
            android:layout_marginLeft="2dp"
            android:textSize="20dp"
            android:text="@string/ingredients"/>

        <TextView
            android:id="@+id/ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/ingredientsTitle"
            android:layout_marginLeft="2dp"
            android:textSize="15dp" />

        <View
            android:id="@+id/hr2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@+id/ingredients"
            app:layout_constraintStart_toStartOf="parent"
            android:background="#444444" />

        <TextView
            android:id="@+id/measurementsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/hr2"
            android:layout_marginLeft="2dp"
            android:textSize="20dp"
            android:text="@string/measurements"/>

        <TextView
            android:id="@+id/measurements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/measurementsTitle"
            android:layout_marginLeft="2dp"
            android:textSize="15dp" />

        <View
            android:id="@+id/hr3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@+id/measurements"
            app:layout_constraintStart_toStartOf="parent"
            android:background="#444444" />

        <TextView
            android:id="@+id/instructionsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/hr3"
            android:layout_marginLeft="2dp"
            android:textSize="20dp"
            android:text="@string/instructions" />

        <TextView
            android:id="@+id/instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/instructionsTitle"
            android:layout_marginLeft="2dp"
            android:textSize="15dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
